[examples] fix omitted relu in LeNet learning notebook

--- a/examples/01-learning-lenet.ipynb
+++ b/examples/01-learning-lenet.ipynb
@@ -94,7 +94,7 @@
     "    n.pool2 = L.Pooling(n.conv2, kernel_size=2, stride=2, pool=P.Pooling.MAX)\n",
     "    n.ip1 = L.InnerProduct(n.pool2, num_output=500, weight_filler=dict(type='xavier'))\n",
     "    n.relu1 = L.ReLU(n.ip1, in_place=True)\n",
-    "    n.ip2 = L.InnerProduct(n.ip1, num_output=10, weight_filler=dict(type='xavier'))\n",
+    "    n.ip2 = L.InnerProduct(n.relu1, num_output=10, weight_filler=dict(type='xavier'))\n",
     "    n.loss = L.SoftmaxWithLoss(n.ip2, n.label)\n",
     "    return n.to_proto()\n",
     "    \n",
